<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">kbmd</string>
    <string name="share_label">Save to kbmd</string>
    <string name="process_text_label">Save to kbmd</string>
    <string name="shortcut_drawing">New drawing</string>
    <string name="shortcut_drawing_long">New drawing (S Pen)</string>
    <string name="shortcut_note">New note</string>
    <string name="shortcut_daily">Daily note</string>
    <string name="shortcut_daily_long">Today\'s daily note</string>
    <string name="shortcut_search">Search</string>
    <string name="shortcut_habits">Habits</string>
    <string name="shortcut_tasks">Tasks</string>
    <string name="shortcut_habits_long">Check off today\'s habits</string>
</resources>
